--- a/src/MyButton/MyButton.css
+++ b/src/MyButton/MyButton.css
@@ -1,8 +1,14 @@
 .my-button {
-    padding: 5px;
-    border: 1px solid aquamarine;
+    padding: 10px;
     color: dimgrey;
     background-color: transparent;
+    font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 700;
+    border: 0;
+    border-radius: 3em;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 1;
 }
 
 .my-button_big {
